fix display of pool timers not showing.

--- a/src/scss/RewardsHub.scss
+++ b/src/scss/RewardsHub.scss
@@ -44,13 +44,29 @@
   }
   .cardBody {
     width: 80%;
+    h1 {
+      display: flex;
+      width: 100%;
+      p {
+        width: 100%; 
+        display: flex;
+        a {
+          display: block;
+          margin-left: auto;
+        }
+      }
+    }
     title {
       display: flex;
       font-size: $lg;
       p {
         color: $text-light1;
         margin-right: auto;
+        a {
+          margin-left: auto;
+        }
       }
+      
       span {
         color: $text-light;
         margin-left: auto;
